src/index.css
@import "tailwindcss";

@theme {
  --font-roboto: Roboto, sans-serif;
  --color-primary: #0f172a;
  --color-black: #0f172a;
  --color-secondary: #c084fc;
  --color-gray: #e2e8f0;
  --color-blue: #94a3b8;
  --text-large: 4.375rem;
}

html,
body {
  overflow-x: hidden;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
  box-shadow: 0 0 0 1000px transparent inset !important;
  border: 2px solid #c084fc !important;
  -webkit-text-fill-color: white !important;
  transition: background-color 5000s ease-in-out 0s !important;
}

